2009-03-12  Murray Cumming  <murrayc@murrayc.com>

	* glom/libglom/Makefile.am: Do not install some headers that are for 
	API that I do not really want other people to use.

2009-03-12  Murray Cumming  <murrayc@murrayc.com>

	* glom/utility_widgets/adddel/eggcolumnchooser/: Copy a newer version from 
	libegg, which already fixed the use of deprecated GTK+ macros.
	* glom/utility_widgets/flowtable.cc:
	* glom/utility_widgets/flowtable.h: child_type_vfunc(): Use GType instead 
	of deprecated GtkType.
	This mostly fixes bug #575021 (André Klapper).

2009-03-12  Murray Cumming  <murrayc@murrayc.com>

	* configure.in: Rename to configure.ac, because configure.in is 
	deprecated by recent autotools.
	
2009-03-12  Armin Burgmeier  <armin@openismus.com>

	* configure.in: Added config.h to AC_CONFIG_FILES, so that we create
	two config files: config.h with all definitions, and libglom_config.h
	which contains only definitions prefixed with GLOM_ to be installed.
	This means header files cannot use non-prefixed definitions.

	* glom/libglom/libglom_config.h.in: New file containing the
	definitions to be installed.

	* glom/libglom/connectionpool_backends/postgres_self.cc:
	* glom/libglom/data_structure/iso_codes.cc:
	* glom/translation/window_translations.cc:
	* glom/utility_widgets/calendar/glomgtkcalendar.h:
	* glom/utility_widgets/calendar/glomgtkcalendar.c:
	* glom/application.cc:
	* glom/main.cc: Adapt the code by including config.h instead of
	libglom_config.h.

1.9.4:

2009-03-10  Armin Burgmeier  <armin@openismus.com>

	* win32/build_installer: Only install the postgres and sqlite libgda
	provider, and not all the others. This prevents libgda from trying to
	load them, and fail doing so with a user-visible message about some
	DLLs not being found.

2009-03-10  Armin Burgmeier  <armin@openismus.com>

	* glom/xsl_utils.cc: Made reports work on Windows, by using
	Glib::get_tmp_dir() instead of "/tmp" and ShellExecute instead of