@@ -1,3 +1,8 @@
+2009-03-13  Murray Cumming  <murrayc@murrayc.com>
+
+	* glom/libglom/connectionpool_backends/postgres.cc: Fix the build when 
+	GLOM_CONNECTION_DEBUG is defined.
+
 2009-03-12  Murray Cumming  <murrayc@murrayc.com>
 
 	* glom/libglom/Makefile.am: Do not install some headers that are for 
